# FireLine

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
services/core-api/: Dockerfile  pyproject.toml  requirements.txt
services/core-api/app/: agent.py  db.py  main.py  models.py  schemas.py
services/core-api/app/jobs/: audit.py  catalog.py  issue.py  signing.py
services/core-api/app/local_ai/: __init__.py  analyst.py  nominations.py  ollama_client.py
services/core-api/app/pipeline/: alerting.py  correlate.py  geo.py  normalize.py  rules.py
services/core-api/app/reasoning/: boundary.py  brain.py  proposals.py
services/core-api/collectors/: agent_runner.py  identity_signins.py  network_discovery.py
services/core-api/tests/: test_external.py  test_impossible_travel.py  test_local_ai_boundary.py  test_pipeline.py  test_reasoning_boundary.py  test_tasking.py
