[project]
name = "blackbirch-core-api"
version = "0.1.0"
description = "Blackbirch cyber platform — core API spine (ingest -> correlate -> alert)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.16",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",          # required by fastapi TestClient
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
